<resources>
    <string name="app_name">finalandroid</string>

    <string name="hello_world">Hello brand</string>
    <string name="action_setting">Setting</string>

    <string-array name="carbrand">
        <item>Carbrand</item>
        <item>Honda</item>
        <item>Kawasaki</item>
        <item>Suzuki</item>
        <item>Yamaha</item>
    </string-array>

    <string-array name="carcolor">

        <item>Carcolor</item>
        <item>Black</item>
        <item>White</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Gray</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Black-Red</item>
        <item>Black-Blue</item>
        <item>Black-Yellow</item>
        <item>White-Red</item>
        <item>White-Black</item>
        <item>Pink</item>
    </string-array>

    <string-array name="country">

        <item>Country</item>
        <item>Bangkok</item>
        <item>Krabi</item>
        <item>Kanchanaburi</item>
        <item>Kalasin</item>
        <item>Kamphaeng</item>

        <item>Khon Kaen</item>
        <item>Chanthaburi</item>
        <item>Chachoengsao</item>
        <item>Chonburi</item>
        <item>Chainat</item>

        <item>Chaiyaphum</item>
        <item>Chumphon</item>
        <item>Chiang Mai</item>
        <item>Chiang Rai </item>
        <item>Trang</item>

        <item>Trat</item>
        <item>Tak</item>
        <item>Nakhon Nayok</item>
        <item>Nakhon Pathom</item>
        <item>Nakhon Phanom</item>

        <item>Nakhon Ratchasima</item>
        <item>Nakhon Si Thammarat</item>
        <item>Nakhon Sawan</item>
        <item>Nonthaburi </item>
        <item>Narathiwat</item>

        <item>Nan</item>
        <item>Bueng Kan</item>
        <item>Buriram</item>
        <item>Pathum Thani</item>
        <item>Prachuap Khiri Khan</item>

        <item>Prachinburi</item>
        <item>Pattani</item>
        <item>Phra Nakhon Si Ayutthaya</item>
        <item>Phayao</item>
        <item>Phang Nga</item>

        <item>Phatthalung</item>
        <item>Phichit</item>
        <item>Phitsanulok</item>
        <item>Phetchaburi</item>
        <item>Phetchabun</item>

        <item>Phrae</item>
        <item>Phuket</item>
        <item>Maha Sarakham</item>
        <item>Mukdahan</item>
        <item>Mae Hong Son</item>

        <item>Yasothon</item>
        <item>Yala</item>
        <item>Roi Et</item>
        <item>Ranong</item>
        <item>Rayong</item>

        <item>Ratchaburi</item>
        <item>Lopburi</item>
        <item>Lampang</item>
        <item>Lamphun</item>
        <item>Loei</item>

        <item>Sisaket</item>
        <item>Sakon Nakhon</item>
        <item>Songkhla</item>
        <item>Satun </item>
        <item>Samut Prakan </item>

        <item>Samut Songkhram</item>
        <item>Samut Sakhon</item>
        <item>Sa Kaeo</item>
        <item>Saraburi</item>
        <item>Sing Buri</item>

        <item>Sukhothai</item>
        <item>Suphan Buri</item>
        <item>Surat Thani </item>
        <item>Surin</item>
        <item>Nong Khai</item>

        <item>Nong Bua Lamphu </item>
        <item>Ang Thong </item>
        <item>Amnat Charoen</item>
        <item>Udon Thani</item>
        <item>Uttaradit </item>

        <item>Uthai Thani</item>
        <item>Ubon Ratchathani</item>

    </string-array>

    <string name="action_sign_in_short">Register</string>
    <string name="email">mail</string>

    <string name="minimum_pass">Password too short, enter minimum 6 characters!</string>
    <string name="mAuth_failed">Authentication failed, check your email and password or sign up</string>

    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>

    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>

    <string name="new_pass">New Password</string>

    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>

    <string name="btn_link_to_register">Register now!!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>

    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>

    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>

    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>

    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>

    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>

    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
</resources>



